WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
284845
REGRESSION (
287689@main
): Blank view on iOS when entering video fullscreen
https://bugs.webkit.org/show_bug.cgi?id=284845
Summary
REGRESSION (287689@main): Blank view on iOS when entering video fullscreen
Andy Estes
Reported
2024-12-17 14:12:33 PST
SSIA
Attachments
Add attachment
proposed patch, testcase, etc.
Andy Estes
Comment 1
2024-12-17 14:12:34 PST
<
rdar://problem/141574819
>
Andy Estes
Comment 2
2024-12-17 14:13:37 PST
Pull request:
https://github.com/WebKit/WebKit/pull/38098
EWS
Comment 3
2024-12-17 21:21:23 PST
Committed
287985@main
(5c3c88b4f9a7): <
https://commits.webkit.org/287985@main
> Reviewed commits have been landed. Closing PR #38098 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug