Source/WebCore/platform/ios/VideoPresentationInterfaceAVKitLegacy.mm
@@ -351,7 +351,6 @@ static WebAVPictureInPictureContentViewController *allocWebAVPictureInPictureCon
 
 NS_ASSUME_NONNULL_BEGIN
 @interface WebAVPlayerViewController : NSObject<AVPlayerViewControllerDelegate>
-@property (readonly, nonatomic) WebAVPlayerLayerView *playerLayerView;
 - (instancetype)initWithFullscreenInterface:(WebCore::VideoPresentationInterfaceAVKitLegacy *)interface;
 - (void)enterFullScreenAnimated:(BOOL)animated completionHandler:(void (^)(BOOL success, NSError *))completionHandler;
 - (void)exitFullScreenAnimated:(BOOL)animated completionHandler:(void (^)(BOOL success, NSError *))completionHandler;
@@ -375,7 +374,6 @@ NS_ASSUME_NONNULL_END
     RetainPtr<UIViewController> _presentingViewController;
 #endif
     RetainPtr<AVPlayerViewController> _avPlayerViewController;
-    RetainPtr<WebAVPlayerLayerView> _playerLayerView;
     RetainPtr<NSTimer> _startPictureInPictureTimer;
     WeakObjCPtr<WebAVPlayerViewControllerDelegate> _delegate;
 
@@ -392,18 +390,13 @@ NS_ASSUME_NONNULL_END
 
     _fullscreenInterface = ThreadSafeWeakPtr { *interface };
 
-    _playerLayerView = adoptNS([WebCore::allocWebAVPlayerLayerViewInstance() init]);
-    RetainPtr playerLayer = (WebAVPlayerLayer *)[_playerLayerView playerLayer];
-    if (interface)
-        [playerLayer setPresentationModel:interface->videoPresentationModel().get()];
-
     OBJC_ALWAYS_LOG(OBJC_LOGIDENTIFIER);
 
 #if PLATFORM(APPLETV)
     _avPlayerViewController = adoptNS([allocAVPlayerViewControllerInstance() init]);
     [self configurePlayerViewControllerWithFullscreenInterface:interface];
 #else
-    _avPlayerViewController = adoptNS([allocAVPlayerViewControllerInstance() initWithPlayerLayerView:_playerLayerView.get()]);
+    _avPlayerViewController = adoptNS([allocAVPlayerViewControllerInstance() initWithPlayerLayerView:interface->playerLayerView()]);
 #endif
     [_avPlayerViewController setModalPresentationStyle:UIModalPresentationOverFullScreen];
 #if PLATFORM(WATCHOS)
@@ -471,11 +464,6 @@ NS_ASSUME_NONNULL_END
     _pipController = nil;
 #endif
     [super dealloc];
-}
-
-- (WebAVPlayerLayerView *)playerLayerView
-{
-    return _playerLayerView.get();
 }
 
 #if !PLATFORM(APPLETV)
@@ -805,10 +793,10 @@ AVPlayerViewController *VideoPresentationInterfaceAVKitLegacy::avPlayerViewContr
     return [m_playerViewController avPlayerViewController];
 }
 
-void VideoPresentationInterfaceAVKitLegacy::setupFullscreen(const FloatRect& initialRect, const FloatSize& videoDimensions, UIView* parentView, HTMLMediaElementEnums::VideoFullscreenMode mode, bool allowsPictureInPicturePlayback, bool standby, bool blocksReturnToFullscreenFromPictureInPicture)
+void VideoPresentationInterfaceAVKitLegacy::setupFullscreen(UIView& videoView, const FloatRect& initialRect, const FloatSize& videoDimensions, UIView* parentView, HTMLMediaElementEnums::VideoFullscreenMode mode, bool allowsPictureInPicturePlayback, bool standby, bool blocksReturnToFullscreenFromPictureInPicture)
 {
     [playerController() setContentDimensions:videoDimensions];
-    VideoPresentationInterfaceIOS::setupFullscreen(initialRect, videoDimensions, parentView, mode, allowsPictureInPicturePlayback, standby, blocksReturnToFullscreenFromPictureInPicture);
+    VideoPresentationInterfaceIOS::setupFullscreen(videoView, initialRect, videoDimensions, parentView, mode, allowsPictureInPicturePlayback, standby, blocksReturnToFullscreenFromPictureInPicture);
     if (playerLayer().captionsLayer != captionsLayer())
         playerLayer().captionsLayer = captionsLayer();
 }
@@ -857,11 +845,6 @@ void VideoPresentationInterfaceAVKitLegacy::setupPlayerViewController()
     if (!m_routingContextUID.isEmpty())
         [m_playerViewController setWebKitOverrideRouteSharingPolicy:(NSUInteger)m_routeSharingPolicy routingContextUID:m_routingContextUID];
 
-    if (!m_currentMode.hasPictureInPicture() && !m_changingStandbyOnly) {
-        ALWAYS_LOG_IF_POSSIBLE(LOGIDENTIFIER, "Moving videoView to fullscreen WebAVPlayerLayerView");
-        [playerLayerView() transferVideoViewTo:[m_playerViewController playerLayerView]];
-    }
-
 #if PLATFORM(WATCHOS)
     m_viewController = videoPresentationModel() ? videoPresentationModel()->createVideoFullscreenViewController(avPlayerViewController()) : nil;
 #endif
@@ -869,8 +852,6 @@ void VideoPresentationInterfaceAVKitLegacy::setupPlayerViewController()
 
 void VideoPresentationInterfaceAVKitLegacy::invalidatePlayerViewController()
 {
-    returnVideoView();
-
     [m_playerViewController setDelegate:nil];
     [m_playerViewController setPlayerController:nil];
     m_playerViewController = nil;
@@ -924,11 +905,6 @@ bool VideoPresentationInterfaceAVKitLegacy::isExternalPlaybackActive() const
 bool VideoPresentationInterfaceAVKitLegacy::willRenderToLayer() const
 {
     return true;
-}
-
-void VideoPresentationInterfaceAVKitLegacy::returnVideoView()
-{
-    [[m_playerViewController playerLayerView] transferVideoViewTo:playerLayerView()];
 }
 
 static std::optional<bool> isPictureInPictureSupported;
